--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
         "@testing-library/dom": "^7.2.1",
         "@testing-library/jest-dom": "^5.5.0",
         "babel-jest": "^25.3.0",
-        "jest": "^25.3.0"
+        "jest": "^25.3.0",
+        "jest-canvas-mock": "^2.3.1"
+    },
+    "dependencies": {
+        "canvas": "^2.7.0"
     }
 }
