--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "homepage": "https://github.com/devlewis/particles#readme",
     "devDependencies": {
         "@babel/core": "^7.9.0",
+        "@babel/plugin-transform-modules-commonjs": "^7.13.8",
         "@babel/preset-env": "^7.9.5",
         "@testing-library/dom": "^7.2.1",
         "@testing-library/jest-dom": "^5.5.0",
